[package]
name = "AdventOfCode2024"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["day01", "day02", "day03", "day04", "day05", "day06"]
resolver = "2"

[dependencies]
day01 = {path = "day01"}
day02 = {path = "day02"}
day03 = {path = "day03"}
day04 = {path = "day04"}
day05 = {path = "day05"}
day06 = {path = "day06"}
